[gd_scene load_steps=67 format=3 uid="uid://cvv6wgu78lm73"]

[ext_resource type="Texture2D" uid="uid://fc3u85kjj2mk" path="res://Assets/Animations/BasicWalkUpdate.png" id="1_cuj85"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_qu07d"]
[ext_resource type="Texture2D" uid="uid://dticwtjgtm4pt" path="res://Assets/Animations/JumpDown (2).png" id="2_cxw6h"]
[ext_resource type="Texture2D" uid="uid://3626gleyg5oo" path="res://Assets/Animations/dissolveFInal (2).png" id="2_ka8xp"]
[ext_resource type="Texture2D" uid="uid://l0dm5m3btg0s" path="res://Assets/Animations/JumpUp.png" id="3_mclxe"]
[ext_resource type="Texture2D" uid="uid://cc2lwf6wywos5" path="res://Assets/Animations/BasicWalkUpdate4Frame (1).png" id="4_davsm"]
[ext_resource type="AudioStream" uid="uid://davvp3n47sbwp" path="res://Assets/Audio/LandingSoundBass.wav" id="7_bv8uc"]
[ext_resource type="Texture2D" uid="uid://bhurygnxhbaf4" path="res://Assets/Animations/DeathAnimRev-Sheet.png" id="7_u665y"]
[ext_resource type="AudioStream" uid="uid://4kskrb54tb2u" path="res://Assets/Audio/JumpSound.wav" id="8_66tfw"]
[ext_resource type="Texture2D" uid="uid://w41q8o8fx5et" path="res://Assets/Animations/ScreenFadeIn.png" id="9_4ax3h"]
[ext_resource type="Texture2D" uid="uid://cfnt66fee8ko2" path="res://Assets/Animations/ScreenFadeOut.png" id="10_8u3lg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r2dx7"]
atlas = ExtResource("7_u665y")
region = Rect2(0, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwmcj"]
atlas = ExtResource("7_u665y")
region = Rect2(35, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhytt"]
atlas = ExtResource("7_u665y")
region = Rect2(70, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr27i"]
atlas = ExtResource("7_u665y")
region = Rect2(105, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_4al47"]
atlas = ExtResource("7_u665y")
region = Rect2(140, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_syy62"]
atlas = ExtResource("7_u665y")
region = Rect2(175, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsy30"]
atlas = ExtResource("7_u665y")
region = Rect2(210, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrf68"]
atlas = ExtResource("7_u665y")
region = Rect2(245, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo4ib"]
atlas = ExtResource("7_u665y")
region = Rect2(280, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnng"]
atlas = ExtResource("7_u665y")
region = Rect2(315, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_losi5"]
atlas = ExtResource("7_u665y")
region = Rect2(350, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtbks"]
atlas = ExtResource("7_u665y")
region = Rect2(385, 0, 35, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gek1"]
atlas = ExtResource("2_cxw6h")
region = Rect2(0, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5g8y"]
atlas = ExtResource("1_cuj85")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_el3dy"]
atlas = ExtResource("3_mclxe")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuku6"]
atlas = ExtResource("4_davsm")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bh0j"]
atlas = ExtResource("4_davsm")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqgwo"]
atlas = ExtResource("4_davsm")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtn40"]
atlas = ExtResource("4_davsm")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_elo4h"]
atlas = ExtResource("2_ka8xp")
region = Rect2(0, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq07b"]
atlas = ExtResource("2_ka8xp")
region = Rect2(38, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq5e2"]
atlas = ExtResource("2_ka8xp")
region = Rect2(76, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftuwe"]
atlas = ExtResource("2_ka8xp")
region = Rect2(114, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh4gq"]
atlas = ExtResource("2_ka8xp")
region = Rect2(152, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_laouu"]
atlas = ExtResource("2_ka8xp")
region = Rect2(190, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw804"]
atlas = ExtResource("2_ka8xp")
region = Rect2(228, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj4m7"]
atlas = ExtResource("2_ka8xp")
region = Rect2(266, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_48las"]
atlas = ExtResource("2_ka8xp")
region = Rect2(304, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbnpj"]
atlas = ExtResource("2_ka8xp")
region = Rect2(342, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rodr2"]
atlas = ExtResource("2_ka8xp")
region = Rect2(380, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57lc0"]
atlas = ExtResource("2_ka8xp")
region = Rect2(418, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5inxw"]
atlas = ExtResource("2_ka8xp")
region = Rect2(0, 64, 38, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ev1cv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2dx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwmcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhytt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr27i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4al47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syy62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsy30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrf68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo4ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_losi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtbks")
}],
"loop": false,
"name": &"Death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gek1")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5g8y")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_el3dy")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuku6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bh0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqgwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtn40")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_elo4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq07b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq5e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftuwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh4gq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laouu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw804")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj4m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48las")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbnpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rodr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57lc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5inxw")
}],
"loop": false,
"name": &"Test1",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3l760"]
size = Vector2(24, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_u36f7"]
atlas = ExtResource("9_4ax3h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_me1aq"]
atlas = ExtResource("9_4ax3h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1atg"]
atlas = ExtResource("9_4ax3h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3ags"]
atlas = ExtResource("9_4ax3h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjjmx"]
atlas = ExtResource("9_4ax3h")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ivu"]
atlas = ExtResource("9_4ax3h")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uc7v"]
atlas = ExtResource("9_4ax3h")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoaxh"]
atlas = ExtResource("9_4ax3h")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cma27"]
atlas = ExtResource("9_4ax3h")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_whkyg"]
atlas = ExtResource("9_4ax3h")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14klx"]
atlas = ExtResource("10_8u3lg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pq0j"]
atlas = ExtResource("10_8u3lg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxvkx"]
atlas = ExtResource("10_8u3lg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xawry"]
atlas = ExtResource("10_8u3lg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hetj6"]
atlas = ExtResource("10_8u3lg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tssx"]
atlas = ExtResource("10_8u3lg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nykb3"]
atlas = ExtResource("10_8u3lg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd0du"]
atlas = ExtResource("10_8u3lg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2pay"]
atlas = ExtResource("10_8u3lg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1adls"]
atlas = ExtResource("10_8u3lg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wth8n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u36f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me1aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1atg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3ags")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjjmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ivu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uc7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoaxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cma27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_whkyg")
}],
"loop": false,
"name": &"FadeIn",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14klx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pq0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxvkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xawry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hetj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tssx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nykb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd0du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2pay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1adls")
}],
"loop": false,
"name": &"FadeOut",
"speed": 12.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 5
script = ExtResource("1_qu07d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_ev1cv")
animation = &"Death"
autoplay = "Idle"
frame = 11
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -30.5)
shape = SubResource("RectangleShape2D_3l760")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(3, -40)
scale = Vector2(2.5442, 2.5442)

[node name="landingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_bv8uc")
volume_db = 8.0

[node name="jumpingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_66tfw")
volume_db = 5.0

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="FadeTimer" type="Timer" parent="."]
one_shot = true

[node name="FadeOut" type="AnimatedSprite2D" parent="."]
z_index = 10
position = Vector2(-1, -31)
scale = Vector2(50, 50)
sprite_frames = SubResource("SpriteFrames_wth8n")
animation = &"FadeOut"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
